--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -14,6 +14,10 @@
 <ul>
     <li th:each="data : ${lists}" th:text="${data}"></li>
 </ul>
+<tr th:each="prod : ${lists}">
+    　　<td th:text="${prod.userName}"></td>
+    　　<td th:text="${prod.age}"></td>
+</tr>
 
 </body>
 </html>
