--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -8,16 +8,16 @@
     <script type="text/javascript" th:src="@{/js/hello.js}"></script>
 </head>
 <body>
-<!--<p th:text="${author?.userName}"></p>
-<p th:text="${author?.age}"></p>-->
-<div>==========List迭代==============</div>
+<p th:text="${author?.userName}"></p>
+<p th:text="${author?.age}"></p>
+<!--<div>==========List迭代==============</div>
 <ul>
     <li th:each="data : ${lists}" th:text="${data}"></li>
 </ul>
 <tr th:each="prod : ${lists}">
     　　<td th:text="${prod.userName}"></td>
     　　<td th:text="${prod.age}"></td>
-</tr>
+</tr>-->
 
 </body>
 </html>
