--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -10,14 +10,14 @@
 <body>
 <p th:text="${author?.userName}"></p>
 <p th:text="${author?.age}"></p>
-<!--<div>==========List迭代==============</div>
+<div>==========List迭代==============</div>
 <ul>
     <li th:each="data : ${lists}" th:text="${data}"></li>
 </ul>
 <tr th:each="prod : ${lists}">
     　　<td th:text="${prod.userName}"></td>
     　　<td th:text="${prod.age}"></td>
-</tr>-->
+</tr>
 
 </body>
 </html>
