--- a/guoz-management/src/main/resources/templates/hello.html
+++ b/guoz-management/src/main/resources/templates/hello.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" th:src="@{/js/hello.js}"></script>
 </head>
 <body>
-<p th:text="${author?.userName}"></p>
+<p th:text="${author?.account}"></p>
 <p th:text="${author?.age}"></p>
 <div>==========List迭代==============</div>
 <ul>
